--- a/styles.css
+++ b/styles.css
@@ -32,3 +32,52 @@ body {
     width: 250px;
     font-size: 16px;
   }
+  .searchArea button {
+    padding: 10px 20px;
+    font-size: 16px;
+    margin-left: 10px;
+    background-color:#245158;
+    color: white;
+    border: navy;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  
+  .searchArea button:hover {
+    background-color: #9fb9cb;
+  }
+
+  .grid {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
+
+  .innerStyle {
+    border: 2px solid red;
+    margin: 10px;
+    padding: 20px;
+    background-color: bisque, 0.8;
+    border-radius: 10px;
+    box-shadow: 4px 5px 3px grey;
+}
+.text-box {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 600px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    color: #000;
+  }
+
+  .text-box2 {
+    background-color: rgba(255, 255, 255, 0.1); /* semi-transparent white */
+    padding: 20px;
+    margin: 20px auto;
+    max-width: 600px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    color: #000;
+  }
